New name for mod

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,7 @@
-name = mcl_breeze_blocks
+name = breeze_blocks
 depends = mcl_colorblocks, mcl_dyes, mcl_sounds, mcl_util
 supported_games = mineclonia
+unsupported_games = mineclone2
 title = Breeze Blocks for Mineclonia
 author = JoseDouglas26
+min_minetest_version = 5.6
