--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = breeze_blocks
-depends = mcl_colorblocks, mcl_dyes, mcl_sounds, mcl_util
+depends = mcl_colorblocks, mcl_dyes, mcl_sounds, mcl_stonecutter, mcl_util
 supported_games = mineclonia
 unsupported_games = mineclone2
 title = Breeze Blocks for Mineclonia
