--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "Lua.diagnostics.globals": [
         "minetest",
         "mcl_dyes",
-        "mcl_sounds"
+        "mcl_sounds",
+        "mcl_stonecutter"
     ]
 }
